Overflow hidden removed, causing some trouble, need another fix on about page. Can scroll horizontally right now.

--- a/wp/wp-content/themes/FoundationPress-child/css/staff.css
+++ b/wp/wp-content/themes/FoundationPress-child/css/staff.css
@@ -1,6 +1,3 @@
-.crewList .panel {
-    overflow-x: hidden;
-}
 .category-staff {
     margin-bottom: 0;    
 }
